--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+MoveMaster_UnityProject_V2.zip filter=lfs diff=lfs merge=lfs -text
